[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/Bomb.png" type="Texture" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]
[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=5]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginScore" type="MarginContainer" parent="."]
margin_right = 400.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxScore" type="HBoxContainer" parent="MarginScore"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2Score" type="MarginContainer" parent="MarginScore/HBoxScore"]
margin_right = 131.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundScore" type="NinePatchRect" parent="MarginScore/HBoxScore/Margin2Score"]
margin_right = 131.0
margin_bottom = 60.0
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Hbox2Score" type="HBoxContainer" parent="MarginScore/HBoxScore/Margin2Score"]
margin_right = 131.0
margin_bottom = 60.0

[node name="MarginScoreTitle" type="MarginContainer" parent="MarginScore/HBoxScore/Margin2Score/Hbox2Score"]
margin_right = 101.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="ScoreTitle" type="Label" parent="MarginScore/HBoxScore/Margin2Score/Hbox2Score/MarginScoreTitle"]
margin_left = 5.0
margin_top = 14.0
margin_right = 96.0
margin_bottom = 46.0
theme = ExtResource( 2 )
text = "Score:"
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginScoreValue" type="MarginContainer" parent="MarginScore/HBoxScore/Margin2Score/Hbox2Score"]
margin_left = 105.0
margin_right = 131.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="ScoreValue" type="Label" parent="MarginScore/HBoxScore/Margin2Score/Hbox2Score/MarginScoreValue"]
margin_left = 5.0
margin_top = 14.0
margin_right = 21.0
margin_bottom = 46.0
theme = ExtResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginBombs" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -400.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxBombs" type="HBoxContainer" parent="MarginBombs"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 80.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2Bombs" type="MarginContainer" parent="MarginBombs/HBoxBombs"]
margin_left = 267.0
margin_right = 360.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBombs" type="NinePatchRect" parent="MarginBombs/HBoxBombs/Margin2Bombs"]
margin_right = 93.0
margin_bottom = 60.0
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="HBox2Bombs" type="HBoxContainer" parent="MarginBombs/HBoxBombs/Margin2Bombs"]
margin_right = 93.0
margin_bottom = 60.0

[node name="MarginBombTexture" type="MarginContainer" parent="MarginBombs/HBoxBombs/Margin2Bombs/HBox2Bombs"]
margin_right = 46.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="BombTexture" type="TextureRect" parent="MarginBombs/HBoxBombs/Margin2Bombs/HBox2Bombs/MarginBombTexture"]
margin_left = 5.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 55.0
texture = ExtResource( 3 )

[node name="MarginBombsValue" type="MarginContainer" parent="MarginBombs/HBoxBombs/Margin2Bombs/HBox2Bombs"]
margin_left = 50.0
margin_right = 93.0
margin_bottom = 60.0
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="BombsValue" type="Label" parent="MarginBombs/HBoxBombs/Margin2Bombs/HBox2Bombs/MarginBombsValue"]
margin_left = 10.0
margin_top = 16.0
margin_right = 28.0
margin_bottom = 48.0
theme = ExtResource( 2 )
text = "4"

[node name="MarginLives" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -94.0
margin_right = 133.0
margin_bottom = 6.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxLives" type="HBoxContainer" parent="MarginLives"]
margin_left = 20.0
margin_top = 20.0
margin_right = 125.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2Lives" type="MarginContainer" parent="MarginLives/HBoxLives"]
margin_right = 105.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBombs" type="NinePatchRect" parent="MarginLives/HBoxLives/Margin2Lives"]
margin_right = 105.0
margin_bottom = 60.0
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="HBox2Lives" type="HBoxContainer" parent="MarginLives/HBoxLives/Margin2Lives"]
margin_right = 105.0
margin_bottom = 60.0

[node name="MarginPlayerTexture" type="MarginContainer" parent="MarginLives/HBoxLives/Margin2Lives/HBox2Lives"]
margin_right = 58.0
margin_bottom = 60.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="PlayerTexture" type="TextureRect" parent="MarginLives/HBoxLives/Margin2Lives/HBox2Lives/MarginPlayerTexture"]
margin_left = 5.0
margin_top = 5.0
margin_right = 53.0
margin_bottom = 55.0
texture = ExtResource( 5 )

[node name="MarginLivesValue" type="MarginContainer" parent="MarginLives/HBoxLives/Margin2Lives/HBox2Lives"]
margin_left = 62.0
margin_right = 105.0
margin_bottom = 60.0
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="LivesValue" type="Label" parent="MarginLives/HBoxLives/Margin2Lives/HBox2Lives/MarginLivesValue"]
margin_left = 10.0
margin_top = 16.0
margin_right = 28.0
margin_bottom = 48.0
theme = ExtResource( 2 )
text = "4"
